# medical-image-processing-project

./: .gitignore  main-Copy1.ipynb  main.ipynb  main2.ipynb  pyproject.toml
notebooks/: image_conversion.ipynb
scripts/: image_processing.py  roi_markup.py
