[project]
name = "medical-image-processing-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "itk>=5.4.2.post1",
    "matplotlib>=3.10.1",
    "nibabel>=5.3.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]
